POC: 5 design patterns, RAG, POC guide, Gemini Try-On, code structure doc; exclude .env and rag_fashion_1gb
Made-with: Cursor

--- a/agentic_system/frontend/index.html
+++ b/agentic_system/frontend/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fashion Agentic AI - 가상 피팅</title>
+    <title>Virtual Fitting | AI 가상 피팅</title>
+    <meta name="description" content="AI로 완성하는 나만의 가상 피팅. 옷을 입어보기 전에 먼저 확인하세요." />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400&family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <script>
+      (function() {
+        var t = localStorage.getItem('fashion-ai-theme') || 'light';
+        document.documentElement.setAttribute('data-theme', t);
+      })();
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
